freenance/grafana/freenance-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
        runAsGroup: 0
        supplementalGroups:
        - 0
      containers:
      - name: grafana
        image: grafana/grafana:11.6.1
        ports:
        - containerPort: 3000
          name: http-grafana
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc-freenance
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http-grafana
